--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -342,7 +342,8 @@
     "groupLists": "لیست گروه ها",
     "member": "کاربر",
     "createTitle": "برای ایجاد گروه جدید مشخصات زیر را تکمیل کنید.",
-    "development": "توسعه نرم افزار "
+    "development": "توسعه نرم افزار ",
+    "addMemberTitle": "در لیست زیر کاربر مورد نظر را انتخاب کرده و نوع کاربری را مشخص کنید."
   },
   "onlineAssistance": {
     "loginType": "نوع ورود",
