--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -132,7 +132,7 @@
     "connection": "Connection",
     "custom": "Custom",
     "block": "Block",
-    "inActive": "In Active",
+    "inActive": "Inactive",
     "assistance": "Assistance",
     "deleteUser": "Delete User",
     "allowed": "Allowed",
