--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -58,6 +58,7 @@
     "resultScanerStatusYara": " Yara",
     "moreDetail": "More Details",
     "removeSelected": "Remove Selected",
+    "VirusFileReport": "Report Virus File",
     "daily": "Daily",
     "weekly": "Weekly",
     "monthly": "Monthly",
