--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -14,6 +14,7 @@
   "table": {
     "virusWarning": " ",
     "downloadRecord": "",
+    "VirusFileReport": "گزارش فایل آلوده",
     "admin": "ادمین",
     "user": "کاربر",
     "name": "نام",
