add remina and vsCode in resource limitation

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -480,7 +480,9 @@
     "cpu": "CPU (Core)",
     "core": "Core",
     "memory": "Memory(GB)",
-    "saveFile": "Save File"
+    "saveFile": "Save File",
+    "vsCode":"VsCode",
+    "remina":"Remina"
   },
 
   "regexPattern": {
