--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -481,8 +481,8 @@
     "core": "Core",
     "memory": "Memory(GB)",
     "saveFile": "Save File",
-    "vsCode":"VsCode",
-    "remina":"Remina"
+    "ide":"IDE",
+    "remina":"Remote Access"
   },
 
   "regexPattern": {
