Fix: disble the button with no value

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -189,6 +189,7 @@
   "global": {
     "knowledgeManagement": "Knowledge Management",
     "alphabet": "Alphabet",
+    "correctFile": "Chose correct file.",
     "unlimited": "Unlimited",
     "onlineAdmin": "Online admin",
     "creationDate": "Creation date",
