--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -191,6 +191,7 @@
     "userName": "نام کاربری",
     "knowledgeManagement": "مدیریت دانش",
     "onlineAdmin": "ادمین آنلاین",
+    "correctFile": "فایل صحیح را انتخاب کنید",
     "unlimited": "نامحدود",
     "alphabet": "حروف الفبا",
     "creationDate": "تاریخ ایجاد",
