--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -314,7 +314,8 @@
     "limitBySize": "Limit by size",
     "accessToTheUsersDesktop": "Access to the user desktop",
     "goToSystem": "Go to the system",
-    "developing": "Developing ..."
+    "developing": "Developing ...",
+    "notFoundData": "There is no data on the page."
   },
   "groupManagement": {
     "person": "person",
