--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -315,7 +315,8 @@
     "limitBySize": "محدود کردن بر اساس زمان",
     "accessToTheUsersDesktop": "دسترسی به میزکار کاربر",
     "goToSystem": "ورود به سامانه",
-    "developing": "در حال توسعه ..."
+    "developing": "در حال توسعه ...",
+    "notFoundData": "داده ای در صفحه وجود ندارد."
   },
   "groupManagement": {
     "person": "نفر",
