fix:fixed bug after review

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -474,7 +474,8 @@
     "realmP": "realm",
     "sso": "SSO",
     "manager": "Manager",
-    "saveFile": "Save File"
+    "saveFile": "Save File",
+    "zero":"Please enter a value greater than zero."
   },
 
   "regexPattern": {
