feat: give error to file without type

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -184,7 +184,8 @@
   "knowledgeManagement": {
     "recoardeActivite": "Recorded activities",
     "recordedUserActivate": "Recorded user activities",
-    "videoSrcError": "Your browser does not support the video tag."
+    "videoSrcError": "Your browser does not support the video tag.",
+    "emptyTypeError": "Type of the file can not be empty."
   },
   "global": {
     "knowledgeManagement": "Knowledge Management",
