--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -186,7 +186,7 @@
     "recoardeActivite": "فعالیت‌های ضبط شده",
     "recordedUserActivate": "فعالیت‌های ضبط شده کاربر",
     "videoSrcError": "مرورگر شمااز ویدیو پشتیبانی نمی کند.",
-    "emptyTypeError": "دارا بودن فرمت فایل الزامی است"
+    "appropriateType": "فایل با فرمت و اندازه مناسب(1GB) وارد کنید."
   },
   "global": {
     "userName": "نام کاربری",
